--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,57 @@
-# Prerequisites
-*.d
+# Meson build directory
+build/
+builddir/
 
 # Compiled Object files
-*.slo
-*.lo
 *.o
 *.obj
+*.slo
+*.lo
 
 # Precompiled Headers
 *.gch
 *.pch
-
-# Linker files
-*.ilk
-
-# Debugger Files
-*.pdb
 
 # Compiled Dynamic libraries
 *.so
 *.dylib
 *.dll
 
-# Fortran module files
-*.mod
-*.smod
-
 # Compiled Static libraries
-*.lai
-*.la
 *.a
 *.lib
+*.la
+*.lai
 
 # Executables
 *.exe
 *.out
-*.app
+switch
 
-# debug information files
+# Debug files
+*.d
 *.dwo
+*.ilk
+*.pdb
+
+# Editor and IDE
+*~
+*.swp
+*.swo
+.vscode/
+.idea/
+*.kate-swp
+
+# Backup files
+*.bak
+*.orig
+
+# Meson generated
+meson-logs/
+meson-info/
+.ninja_deps
+.ninja_log
+compile_commands.json
+
+# Generated config
+config_generated.h
